--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -9,4 +9,9 @@
     </div>
 </header>
 
+<div id="aboutMe">
+    <h2>Who even is this guy?</h2>
+    <p>A recent graduate with a Digital Information Design degree, I've grown up in South Carolina and stayed all the way through college where I've earned a Bachelors in Digital Information Design. With multiple large team projects for Winthrop, as well as an intense personal project still in the works, I'm ready to tackle anything you can throw at me.</p>
+</div>
+
 <%- include ('./../partials/footer') %>  
