--- a/public/scss/_fontSizes.scss
+++ b/public/scss/_fontSizes.scss
@@ -2,21 +2,15 @@ h1 {
     font-size: 50px;
 }
 h2 {
-    font-size: 45px;
-}
-h3 {
     font-size: 40px;
 }
-h4 {
-    font-size: 35px;
-}
-h5 {
+h3 {
     font-size: 30px;
 }
-h6 {
+h4, h5, h6 {
     font-size: 25px;
 }
-
 p {
     font-size: 20px;
+    line-height: 1.4rem;
 }
