--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,4 +1,17 @@
 <footer>
+    <a href="https://www.linkedin.com/in/michael-walters-0a061318a/" target="_blank">
+        <img src="/images/linkedIn_Icon.png" alt="Linked In Icon Link">
+    </a>
+    <a href="https://www.instagram.com/_michael.walters/" target="_blank">
+        <img src="/images/Instagram_Icon.png" alt="Instagram Icon Link">
+    </a>
+    <a href="https://twitter.com/__Walters__/" target="_blank">
+        <img src="/images/Twitter_Icon.png" alt="Twitter Icon Link">
+    </a>
+    <a href="https://github.com/Walters8657" target="_blank">
+        <img src="/images/Github_Icon.png" alt="Github Icon Link">
+    </a>
+
     <p>&copy <%= new Date().getFullYear() %> Michael Walters </p>
 </footer>
 
