links default color black

--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -7,8 +7,9 @@ body {
     font-family: 'Ubuntu', 'sans-serif';
 }
 
-a {
+a, a:visited {
     text-decoration: none;
+    color: $black;
 }
 
 header {
