--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -1,5 +1,9 @@
 <%- include ('./../partials/header') %>  
 
+<script src="https://cdn.jsdelivr.net/npm/p5@1.3.1/lib/p5.min.js"></script>
+<script src="./js/boid.js"></script>
+<script src="./js/sketch.js"></script>
+
 <header>
     <div>
         <span>
@@ -8,5 +12,9 @@
         </span>
     </div>
 </header>
+
+<div id="flocking">
+
+</div>
 
 <%- include ('./../partials/footer') %>  
