--- a/views/pages/resume.ejs
+++ b/views/pages/resume.ejs
@@ -4,15 +4,15 @@
     <div>
         <span>
             <h1>Michael Walters</h1>
-            <p>Full Stack Development</p>
+            <p>Resume</p>
         </span>
     </div>
 </header>
 
 <nav>
     <ul>
-        <li><a href="/" style="font-weight:600">Home</a></li>
-        <li><a href="/resume">Resume</a></li>
+        <li><a href="/">Home</a></li>
+        <li><a href="/resume" style="font-weight:600">Resume</a></li>
         <li><a href="/miniProjects">Mini Projects</a></li>
     </ul>
 </nav>
