--- a/views/pages/miniProjects.ejs
+++ b/views/pages/miniProjects.ejs
@@ -4,16 +4,16 @@
     <div>
         <span>
             <h1>Michael Walters</h1>
-            <p>Full Stack Development</p>
+            <p>Mini Projects</p>
         </span>
     </div>
 </header>
 
 <nav>
     <ul>
-        <li><a href="/" style="font-weight:600">Home</a></li>
+        <li><a href="/">Home</a></li>
         <li><a href="/resume">Resume</a></li>
-        <li><a href="/miniProjects">Mini Projects</a></li>
+        <li><a href="/miniProjects" style="font-weight:600">Mini Projects</a></li>
     </ul>
 </nav>
 
