Better current page stuff

--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -44,6 +44,9 @@ nav {
     ul {
         li {
             display: inline;
+            a {
+                padding: 5px;
+            }
         }
         li:not(:nth-last-child(1)):after {
             content: ' | ';
