--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -11,7 +11,7 @@
 
 <nav>
     <ul>
-        <li><a href="/" style="font-weight:600">Home</a></li>
+        <li><a href="/" style="background-color:#322b24; padding: 5px; border-radius: 10px; color: #fafafa">Home</a></li>
         <li><a href="/resume">Resume</a></li>
         <li><a href="/miniProjects">Mini Projects</a></li>
     </ul>
