--- a/views/pages/resume.ejs
+++ b/views/pages/resume.ejs
@@ -12,7 +12,7 @@
 <nav>
     <ul>
         <li><a href="/">Home</a></li>
-        <li><a href="/resume" style="font-weight:600">Resume</a></li>
+        <li><a href="/resume" style="background-color:#322b24; border-radius: 10px; color: #fafafa">Resume</a></li>
         <li><a href="/miniProjects">Mini Projects</a></li>
     </ul>
 </nav>
