--- a/views/pages/miniProjects.ejs
+++ b/views/pages/miniProjects.ejs
@@ -13,7 +13,7 @@
     <ul>
         <li><a href="/">Home</a></li>
         <li><a href="/resume">Resume</a></li>
-        <li><a href="/miniProjects" style="font-weight:600">Mini Projects</a></li>
+        <li><a href="/miniProjects" style="background-color:#322b24; padding: 5px; border-radius: 10px; color: #fafafa">Mini Projects</a></li>
     </ul>
 </nav>
 
