--- a/views/pages/resume.ejs
+++ b/views/pages/resume.ejs
@@ -17,4 +17,75 @@
     </ul>
 </nav>
 
+<div id="resumeContainer">
+    <aside id="resumeAside">
+        <div>
+            <h2>Contact</h2>
+            <hr/>
+            <p>803-493-7198</p>
+            <p>waltersm305@gmail.com</p>
+            <p>Rock Hill, South Carolina</p>        
+        </div>
+        <div>
+            <h2>Education</h2>
+            <hr>
+            <p>Winthrop University</p>
+            <p>2017 - 2021</p>
+            <p>B.S. Web Application Design</p>
+        </div>
+        <div>
+            <h2>Abilities</h2>
+            <hr>
+            <ul>
+                <li>EJS</li>
+                <li>CSS</li>
+                <li>Git</li>
+                <li>C++</li>
+                <li>Node</li>
+                <li>Sass</li>
+                <li>Linux</li>
+            </ul>
+            <ul>
+                <li>MySQL</li>
+                <li>HTML 5</li>
+                <li>Express</li>
+                <li>MongoDB</li>
+                <li>Photoshop</li>
+                <li>JavaScript</li>
+                <li>Illustrator</li>
+            </ul>
+        </div>
+    </aside>
+    
+    <div id="mainResumeContent">
+        <p>Comfortable with all facets of web development, including back end server design,database connectivity, HTML markup, and CSS design. I’m interested in using theseskills to design and produce web based applications to enhance user experiences</p>
+    
+        <hr>
+        <h2>Front End Developer | Co-Founder</h2>
+        <p>Cloud Music Suite - Monroe, NC</p>
+        <p>July 2020 - Present</p>
+        <hr>
+        <ul>
+            <li>Design and implement a responsive system for mobile devices as well as standard desktop screens</li>
+            <li>Utilization of Figma and Adobe XD to create functional prototypes that were reviewed and approved by the project team</li>
+            <li>Designs were continuously critiqued after initial approval as to improve the overall user experience as tests were conducted with potential users</li>
+            <li>After initial approval, implementation began using EJS and Sass</li>
+            <li>The majority of the site was built utilizing a mixture of CSS Grid and FlexBox in order to ensure both a consistent and adaptable design and user experience</li>
+            <li>As Co-Founder I was also involved in discussion about how and when to move forward with the project, and in doing so, have gained a vast knowledge in how to better manage a team as well as how to establish and adhere to project timelines</li>
+        </ul>
+    
+        <hr>
+        <h2>Facility Maintenance</h2>
+        <p>First Baptist Church - Rock Hill, SC</p>
+        <p>August 2016 - Present</p>
+        <hr>
+        <ul>
+            <li>While not directly related to my career interested, this job has taught me essential skills necessary for any future job</li>
+            <li>Over the course of this position I have gained an appreciation for the fine details of any given situation and take pride in recognizing these details</li>
+            <li>I have gained an understanding of when to ask for assistance, rather than creating an unnecessary challenge and solving the problem on my own</li>
+            <li>Flexibility has been a large part of this job that I have embraced, with it often requiring me to come in during typically unscheduled hours, such as weekend special events or covering for coworkers</li>
+        </ul>
+    </div>
+</div>
+
 <%- include ('./../partials/footer') %>  
