--- a/public/scss/_fontSizes.scss
+++ b/public/scss/_fontSizes.scss
@@ -1,16 +1,20 @@
+html {
+    font-size: 19px;
+}
+
 h1 {
-    font-size: 50px;
+    font-size: 2.63rem;
 }
 h2 {
-    font-size: 40px;
+    font-size: 2.1rem;
 }
 h3 {
-    font-size: 30px;
+    font-size: 1.57rem;
 }
 h4, h5, h6 {
-    font-size: 25px;
+    font-size: 1.31rem;
 }
 p, li {
-    font-size: 19px;
+    font-size: 1rem;
     line-height: 1.6rem;
 }
