--- a/public/scss/_resume.scss
+++ b/public/scss/_resume.scss
@@ -1,15 +1,5 @@
-@media (min-width: 676px) {
-    #resumeContainer {
-        display: flex;
-        margin: 20px auto;
-        max-width: 900px;
-    }
-}
-
 #resumeAside {
-    display: inline-block;
     padding: 20px;
-    border-right: 2px solid $black;
     div {
         margin-bottom: 40px;
         p, li {
@@ -17,6 +7,57 @@
         }
     }
     div:nth-of-type(3) {
+        margin-bottom: 0px;
+        ul {
+            display: inline;
+        }
+        li {
+            display: inline;
+        }
+        li:nth-of-type(even) {
+            opacity: 0.7;
+        }
+        li:nth-of-type(even):after, li:nth-of-type(even):before {
+            content: ' | ';
+        }
+    }
+}
+
+#mainResumeContent {
+    padding: 20px;
+    ul {
+        list-style: inside disc;
+        text-indent: -25px;
+        margin-left: 25px;
+    }
+}
+
+@media (min-width: 515px) {
+    #resumeAside {
+        div:not(:nth-of-type(3)) {
+            display: inline-block;
+        }
+        div:nth-of-type(2) {
+            float: right;
+        }
+        div:nth-of-type(3) {
+            text-align: center;
+            h2 {
+                text-align: left;
+            }
+        }
+    }
+}
+
+@media (min-width: 676px) {
+    #resumeContainer {
+        display: flex;
+        margin: 20px auto;
+        max-width: 900px;
+    }
+    #resumeAside {
+        display: inline-block;
+        border-right: 2px solid $black;
         ul {
             display: inline-block;
         }
@@ -24,9 +65,20 @@
             float: right;
             text-align: right;
         }
+        div:nth-of-type(3) {
+            text-align: left;
+            ul {
+                display: inline-block;
+            }
+            li {
+                display: block;
+            }
+            li:nth-of-type(even) {
+                opacity: 1;
+            }
+            li:nth-of-type(even):after, li:nth-of-type(even):before {
+                content: none;
+            }
+        }
     }
-}
-
-#mainResumeContent {
-    padding: 20px;
 }
