--- a/public/scss/_resume.scss
+++ b/public/scss/_resume.scss
@@ -3,7 +3,7 @@
     div {
         margin-bottom: 40px;
         p, li {
-            margin-bottom: 15px;
+            margin-bottom: 10px;
         }
     }
     div:nth-of-type(3) {
@@ -14,11 +14,13 @@
         li {
             display: inline;
         }
-        li:nth-of-type(even) {
-            opacity: 0.7;
-        }
         li:nth-of-type(even):after, li:nth-of-type(even):before {
             content: ' | ';
+        }
+        ul:nth-of-type(2) {
+            li:nth-of-type(1):before {
+                content: ' | ';
+            }
         }
     }
 }
