--- a/views/pages/resume.ejs
+++ b/views/pages/resume.ejs
@@ -1,21 +1,4 @@
-<%- include ('./../partials/header') %>  
-
-<header>
-    <div>
-        <span>
-            <h1>Michael Walters</h1>
-            <p>Resume</p>
-        </span>
-    </div>
-</header>
-
-<nav>
-    <ul>
-        <li><a href="/">Home</a></li>
-        <li><a href="/resume" style="background-color:#322b24; border-radius: 10px; color: #fafafa">Resume</a></li>
-        <li><a href="/miniProjects">Mini Projects</a></li>
-    </ul>
-</nav>
+<%- include ('./../partials/header', {page: 'Resume'}) %>   
 
 <div id="resumeContainer">
     <aside id="resumeAside">
