--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -1,20 +1,5 @@
-<%- include ('./../partials/header') %>  
+<%- include ('./../partials/header', {page: 'Home'}) %>  
 
-<header>
-    <div>
-        <span>
-            <h1>Michael Walters</h1>
-            <p>Full Stack Development</p>
-        </span>
-    </div>
-</header>
 
-<nav>
-    <ul>
-        <li><a href="/" style="background-color:#322b24; padding: 5px; border-radius: 10px; color: #fafafa">Home</a></li>
-        <li><a href="/resume">Resume</a></li>
-        <li><a href="/miniProjects">Mini Projects</a></li>
-    </ul>
-</nav>
 
 <%- include ('./../partials/footer') %>  
