--- a/views/pages/miniProjects.ejs
+++ b/views/pages/miniProjects.ejs
@@ -1,20 +1,5 @@
-<%- include ('./../partials/header') %>  
+<%- include ('./../partials/header', {page: 'miniProject'}) %>  
 
-<header>
-    <div>
-        <span>
-            <h1>Michael Walters</h1>
-            <p>Mini Projects</p>
-        </span>
-    </div>
-</header>
 
-<nav>
-    <ul>
-        <li><a href="/">Home</a></li>
-        <li><a href="/resume">Resume</a></li>
-        <li><a href="/miniProjects" style="background-color:#322b24; padding: 5px; border-radius: 10px; color: #fafafa">Mini Projects</a></li>
-    </ul>
-</nav>
 
 <%- include ('./../partials/footer') %>  
