--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -11,3 +11,45 @@
     <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, user-scalable=no, width=device-width" /></head>
 
 <body>
+
+<header>
+    <canvas id="headerBubbles"></canvas>
+    <div>
+        <span>
+            <h1>Michael Walters</h1>
+            <% if (page == 'Home') { %>
+                <p>Full Stack Development</p>
+            <% }%>
+    
+            <% if (page == 'Resume') { %>
+                <p>Resume</p>
+            <% }%>
+    
+            <% if (page == 'miniProject') { %>
+                <p>Mini Projects</p>
+            <% }%>
+        </span>
+    </div>
+</header>
+
+<nav>
+    <ul>
+        <% if (page == 'Home') { %>
+            <li><a href="/" style="background-color:#322b24; padding: 5px; border-radius: 10px; color: #fafafa">Home</a></li>
+        <% } else { %>
+            <li><a href="/">Home</a></li>
+        <% } %>
+
+        <% if (page == 'Resume') { %>
+            <li><a href="/resume" style="background-color:#322b24; padding: 5px; border-radius: 10px; color: #fafafa">Resume</a></li>
+        <% } else { %>
+            <li><a href="/resume">Resume</a></li>
+        <% } %>
+
+        <% if (page == 'miniProject') { %>
+            <li><a href="/" style="background-color:#322b24; padding: 5px; border-radius: 10px; color: #fafafa">Mini Projects</a></li>
+        <% } else { %>
+            <li><a href="/miniProjects">Mini Projects</a></li>
+        <% } %>
+    </ul>
+</nav>
