--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -15,5 +15,7 @@
     <p>&copy <%= new Date().getFullYear() %> Michael Walters </p>
 </footer>
 
+<script src="./js/main.js"></script>
+
 </body>
 </html>
