--- a/public/scss/_resume.scss
+++ b/public/scss/_resume.scss
@@ -81,6 +81,11 @@
             li:nth-of-type(even):after, li:nth-of-type(even):before {
                 content: none;
             }
+            ul:nth-of-type(2) {
+                li:nth-of-type(1):before {
+                    content: none;
+                }
+            }
         }
     }
 }
