Simple no content yet page

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -1,5 +1,11 @@
 <%- include ('./../partials/header', {page: 'Home'}) %>  
 
-
+<div class="projectBeingBuilt">
+    <h3>Woah! You're here early!</h3>
+    <div>
+        <span></span> <span></span> <span></span>
+    </div>
+    <p>Please check back later to see if I'm done yet</p>
+</div>
 
 <%- include ('./../partials/footer') %>  
