Fix comment typo

--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -36,7 +36,7 @@ header {
         display: flex; //Centers header text vertically
         align-items: center;
 
-        height: 100%; //Flex box fills hieght of header
+        height: 100%; //Flex box fills height of header
 
         padding: 0px 20px;
         span {
