--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -9,6 +9,9 @@
     <link rel="stylesheet" href="./css/main.css">
 
     <meta name="viewport" content="initial-scale=1.0, width=device-width" />
+
+    <link rel="apple-touch-icon" href="/images/me.ico">
+
 </head>
 
 <body>
