--- a/public/scss/_index.scss
+++ b/public/scss/_index.scss
@@ -1,34 +1,35 @@
-.projectBeingBuilt {
-    text-align: center;
-    padding: 10px;
-    div {
-        margin: 0px auto;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        height: 250px;
-        span {
-            display: block;
-            position: absolute;
-            border-radius: 200px;
-            border: 15px solid rgba(0, 0, 0, 0);
-            border-radius: 200px;
-            border-top-color: $blue;
+.productHighlight {
+    padding: 20px 10px;
+    @media (min-width: 960px) {
+        display: grid;
+        grid-template-columns: auto 300px 600px auto;
+        column-gap: 20px;
+        div:nth-of-type(1) {
+            grid-column: 2/3;
         }
-        span:nth-of-type(1) {
-            width: 200px;
-            height: 200px;
-            animation: spin 2s linear infinite;
+        div:nth-of-type(2) {
+            display: flex;
+            align-self: center;
         }
-        span:nth-of-type(2) {
+    }
+}
+
+#speedometer {
+    #speedoImgContainer {
+        height: 316px;
+        width: 300px;
+        margin: auto;
+        img {
             width: 150px;
-            height: 150px;
-            animation: spin 1.75s linear infinite;
+            position: relative;
         }
-        span:nth-of-type(3) {
-            width: 100px;
-            height: 100px;
-            animation: spin 2.25s linear infinite;
+        img:nth-of-type(2) {
+            margin-left: -80px;
+            top: 25px;
+        }
+        img:nth-of-type(3) {
+            margin-left: -80px;
+            top: 50px;
         }
     }
 }
