--- a/public/scss/_fontSizes.scss
+++ b/public/scss/_fontSizes.scss
@@ -2,6 +2,12 @@ html {
     font-size: 20px;
 }
 
+@media (max-width: 600px) {
+    html {
+        font-size: 17px;
+    }
+}
+
 h1 {
     font-size: 2.63rem;
 }
