--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -9,7 +9,20 @@
 
     <div>
         <p>
-            This app was designed to create a better way for users to track their speed along with the speed limit of the road they're driving on. It also serves as a way for parents or guardians to keep track of whether or not their child is speeding. This works based off of a three strike system, and allows the parent or guardian to set the limit for how fast and how long the child can speed, and who to notify if they do. 
+            This app was designed to create a better way for users to track their speed along with the speed limit of the road they're driving on. It also serves as a way for parents or guardians to keep track of whether or not their child is speeding. This works based off of a three strike system, and allows the parent or guardian to set the limit for how fast and how long the child can speed, as well as who to notify if they do. 
+        </p>
+    </div>
+</div>
+
+<div id="schedulerApp" class="productHighlight">
+    <div id="schedulerImgContainer">
+        <img src="/images/schedulerCalendar.png" alt="Scheduler calendar screenshot">
+        <img src="/images/schedulerNewEvent.png" alt="Scheduler new event screenshot">
+    </div>
+
+    <div>
+        <p>
+            This app was designed to give the children's attention home of Rock Hill a better way to organize their children's schedules. Previously they had been keeping track of the schedules on paper, but with this new system it allowed every child and staff member to view the schedules they need to see. It also opened up the ability to easily generate reports based on name, age, gender, event, and date to know if events are being attended when they are scheduled. 
         </p>
     </div>
 </div>
