--- a/public/scss/_index.scss
+++ b/public/scss/_index.scss
@@ -1,5 +1,5 @@
 .productHighlight {
-    padding: 20px 10px;
+    padding: 40px 10px;
     @media (min-width: 960px) {
         display: grid;
         grid-template-columns: auto 300px 600px auto;
@@ -12,13 +12,15 @@
             align-self: center;
         }
     }
+    div:nth-of-type(1) {
+        margin: auto;
+        height: 316px;
+        width: 300px;
+    }
 }
 
 #speedometer {
     #speedoImgContainer {
-        height: 316px;
-        width: 300px;
-        margin: auto;
         img {
             width: 150px;
             position: relative;
@@ -30,6 +32,15 @@
         img:nth-of-type(3) {
             margin-left: -80px;
             top: 50px;
+        }
+    }
+}
+
+#schedulerApp {
+    #schedulerImgContainer {
+        img {
+            display: block;
+            width: 300px;
         }
     }
 }
