--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -1,5 +1,6 @@
 <%- include ('./../partials/header', {page: 'Home'}) %>  
 
+<h2>Speedometer</h2>
 <div id="speedometer" class="productHighlight">
     <div id="speedoImgContainer">
         <img src="/images/speedoGreen.svg" alt="Speedometer app screenshot">
@@ -14,6 +15,7 @@
     </div>
 </div>
 
+<h2>Schedule Manager</h2>
 <div id="schedulerApp" class="productHighlight">
     <div id="schedulerImgContainer">
         <img src="/images/schedulerCalendar.png" alt="Scheduler calendar screenshot">
