--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -14,9 +14,9 @@ a, a:visited {
 }
 
 hr {
-    height: 1px;
+    height: 2px;
+    border: none;
     background-color: $black;
-    border-radius: 10px;
 }
 
 header {
