--- a/views/pages/resume.ejs
+++ b/views/pages/resume.ejs
@@ -20,22 +20,30 @@
             <h2>Abilities</h2>
             <hr>
             <ul>
-                <li>EJS</li>
-                <li>CSS</li>
-                <li>Git</li>
                 <li>C++</li>
-                <li>Node</li>
-                <li>Sass</li>
-                <li>Linux</li>
+                <li>CSS</li>
+                <li>EJS</li>
+                <li>Git</li>
+                <li>OOP</li>
+                <li>SEO</li>
+                <li>SQL</li>
+                <li>AJAX</li>
+                <li>JSON</li>
+                <li>SASS</li>
+                <li>SCSS</li>
             </ul>
             <ul>
+                <li>Linux</li>
+                <li>HTML5</li>
                 <li>MySQL</li>
-                <li>HTML 5</li>
-                <li>Express</li>
+                <li>GitHub</li>
+                <li>jQuery</li>
+                <li>Node.js</li>
                 <li>MongoDB</li>
-                <li>Photoshop</li>
+                <li>Express.js</li>
                 <li>JavaScript</li>
-                <li>Illustrator</li>
+                <li>Adobe Suite</li>
+                <li>Google Suite</li>
             </ul>
         </div>
     </aside>
@@ -58,15 +66,18 @@
         </ul>
     
         <hr>
-        <h2>Facility Maintenance</h2>
-        <p>First Baptist Church - Rock Hill, SC</p>
-        <p>August 2016 - Present</p>
+        <h2>Back End Developer</h2>
+        <p>Senior Capstone | Startup Company - Rock Hill, SC
+        </p>
+        <p>January 2021 - May 2021</p>
         <hr>
         <ul>
-            <li>While not directly related to my career interested, this job has taught me essential skills necessary for any future job</li>
-            <li>Over the course of this position I have gained an appreciation for the fine details of any given situation and take pride in recognizing these details</li>
-            <li>I have gained an understanding of when to ask for assistance, rather than creating an unnecessary challenge and solving the problem on my own</li>
-            <li>Flexibility has been a large part of this job that I have embraced, with it often requiring me to come in during typically unscheduled hours, such as weekend special events or covering for coworkers</li>
+            <li>Developed a custom API plugin for use primarily with iPhone </li>
+            <li>Used a combination of languages to develop such as: Swift, JavaScript, and MySql, as well as integrating into bubble.io for interfaces and automation</li>
+            <li>Simulated the full launch of the product features developed</li>
+            <li>Learned how to use Apple’s propitiatory coding languages to interface with health-kit data and in order to store and access it for processing</li>
+            <li>Worked within a multidisciplinary team to produce a single cohesive product</li>
+            <li>Use asynchronous communication platforms to effectively communicate needs, questions, and updates regarding the project </li>
         </ul>
     </div>
 </div>
