Added about me section

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -1,5 +1,27 @@
 <%- include ('./../partials/header', {page: 'Home'}) %>  
 
+<div id="aboutMe">
+    <h2>About Me</h2>
+    <hr>
+    <p>As you might have guessed by now, my name is Michael, and I'm a full stack engineer. Lately I've been focusing more on the visual aspects of projects, both designing mockups as well as coding them into existence. While I was at Winthrop University, I was always torn between working on making things look good, and making them work on the back end, so naturally I settled on doing both. Check out some of the projects I've worked on bellow to get an idea of what I can do!</p>
+
+    <div>
+        <a href="https://www.linkedin.com/in/michael-walters-0a061318a/" target="_blank" rel="noopener">
+            LinkedIn
+        </a>
+        <a href="https://www.instagram.com/_michael.walters/" target="_blank" rel="noopener">
+            Instagram
+        </a>
+        <a href="https://twitter.com/__Walters__/" target="_blank" rel="noopener">
+            Twitter
+        </a>
+        <a href="https://github.com/Walters8657" target="_blank" rel="noopener">
+            Github
+        </a>
+    </div>
+
+</div>
+
 <div id="speedometer" class="productHighlight">
     <div id="speedoImgContainer">
         <img src="/images/speedoGreen.svg" alt="Speedometer app screenshot">
