--- a/public/scss/_index.scss
+++ b/public/scss/_index.scss
@@ -1,5 +1,20 @@
+#aboutMe {
+    padding: 30px 15px 30px;
+    max-width: 900px;
+    margin: auto;
+
+    div {
+        text-align: center;
+        padding-top: 15px;
+        font-size: 0.8rem;
+        a:not(:nth-of-type(1)):before {
+            content: " | "
+        }
+    }
+}
+
 .productHighlight {
-    padding: 10px 10px 50px;
+    padding: 30px 15px 30px;
     @media (min-width: 980px) {
         display: grid;
         grid-template-columns: auto 300px 600px auto;
