Added meta desc, keywords, and author

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/main.css">
 
+    <meta name="description" content="Michael Walters Personal Website">
+    <meta name="keywords" content="HTML, CSS, JavaScript, Web Development, Full Stack Development">
+    <meta name="author" content="Michael Walters">
     <meta name="viewport" content="initial-scale=1.0, width=device-width" />
 
     <link rel="apple-touch-icon" href="/images/me.ico">
