--- a/public/scss/_index.scss
+++ b/public/scss/_index.scss
@@ -1,11 +1,13 @@
+@import 'mixins';
+
 #aboutMe {
-    padding: 30px 15px 30px;
+    @include padding;
     max-width: 900px;
     margin: auto;
 }
 
 .productHighlight {
-    padding: 30px 15px 30px;
+    @include padding;
     @media (min-width: 980px) {
         display: grid;
         grid-template-columns: auto 300px 600px auto;
@@ -16,6 +18,7 @@
         div:nth-of-type(2) {
             display: flex;
             align-self: center;
+            
         }
     }
     div:nth-of-type(1) {
@@ -23,6 +26,12 @@
         height: 316px;
         width: 300px;
     }
+    div:nth-of-type(2) {
+        p:nth-last-of-type(1) > a {
+            display: block;
+            text-align: right;
+        }
+    } 
 }
 
 #speedometer {
