Modularize header by creating head

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -1,4 +1,4 @@
-<%- include ('./../partials/header', {page: 'Home'}) %>  
+<%- include ('./../partials/header', {page: 'Home', title: "Michael Walters Development"}) %>  
 
 <div id="aboutMe">
     <h2>About Me</h2>
