Moved screenshots to folder, more modulaztion

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -8,9 +8,9 @@
 
 <div id="speedometer" class="productHighlight">
     <div id="speedoImgContainer">
-        <img src="/images/speedoGreen.svg" alt="Speedometer app screenshot">
-        <img src="/images/speedoYellow.svg" alt="Speedometer app screenshot">
-        <img src="/images/speedoRed.svg" alt="Speedometer app screenshot">
+        <img src="/images/appScreenshots/speedoGreen.svg" alt="Speedometer app screenshot">
+        <img src="/images/appScreenshots/speedoYellow.svg" alt="Speedometer app screenshot">
+        <img src="/images/appScreenshots/speedoRed.svg" alt="Speedometer app screenshot">
     </div>
 
     <div>
@@ -29,8 +29,8 @@
 
 <div id="schedulerApp" class="productHighlight">
     <div id="schedulerImgContainer">
-        <img src="/images/schedulerCalendar.png" alt="Scheduler calendar screenshot">
-        <img src="/images/schedulerNewEvent.png" alt="Scheduler new event screenshot">
+        <img src="/images/appScreenshots/schedulerCalendar.png" alt="Scheduler calendar screenshot">
+        <img src="/images/appScreenshots/schedulerNewEvent.png" alt="Scheduler new event screenshot">
     </div>
 
     <div>
