--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -1,9 +1,9 @@
-<%- include ('./../partials/header', {page: 'Home', title: "Michael Walters Development"}) %>  
+<%- include (""./../partials/header", {page: "Home", title: "Michael Walters Development"}) %>  
 
 <div id="aboutMe">
     <h2>About Me</h2>
     <hr>
-    <p>As you might have guessed by now, my name is Michael, and I'm a full stack engineer. Lately I've been focusing more on the visual aspects of projects, both designing mockups as well as coding them into existence. While I was at Winthrop University, I was always torn between working on making things look good, and making them work on the back end, so naturally I settled on doing both. Check out some of the projects I've worked on bellow to get an idea of what I can do!</p>
+    <p>As you might have guessed by now, my name is Michael, and I'm a full stack engineer. Lately I've been focusing more on the visual aspects of projects, both designing mockups as well as coding them into existence. While I was at Winthrop University, I was always torn between working on making things look good, and making them work on the back end, so naturally I settled on doing both. Check out some of the projects I've worked on below to get an idea of what I can do!</p>
 </div>
 
 <div id="speedometer" class="productHighlight">
