--- a/views/pages/resume.ejs
+++ b/views/pages/resume.ejs
@@ -1,4 +1,4 @@
-<%- include ('./../partials/header', {page: 'Resume'}) %>   
+<%- include ('./../partials/header', {page: 'Resume', title: "Michael Walters Resume"}) %>   
 
 <div id="resumeContainer">
     <aside id="resumeAside">
