--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -8,9 +8,9 @@
 
 <div id="speedometer" class="productHighlight">
     <div id="speedoImgContainer">
-        <img src="/images/appScreenshots/speedoGreen.svg" alt="Speedometer app screenshot">
-        <img src="/images/appScreenshots/speedoYellow.svg" alt="Speedometer app screenshot">
-        <img src="/images/appScreenshots/speedoRed.svg" alt="Speedometer app screenshot">
+        <img id="speedoImg1" src="/images/appScreenshots/speedoGreen.svg" alt="Speedometer app screenshot">
+        <img id="speedoImg2" src="/images/appScreenshots/speedoYellow.svg" alt="Speedometer app screenshot">
+        <img id="speedoImg3" src="/images/appScreenshots/speedoRed.svg" alt="Speedometer app screenshot">
     </div>
 
     <div>
@@ -29,8 +29,8 @@
 
 <div id="schedulerApp" class="productHighlight">
     <div id="schedulerImgContainer">
-        <img src="/images/appScreenshots/schedulerCalendar.png" alt="Scheduler calendar screenshot">
-        <img src="/images/appScreenshots/schedulerNewEvent.png" alt="Scheduler new event screenshot">
+        <img id="cahsmImg1" src="/images/appScreenshots/schedulerCalendar.png" alt="Scheduler calendar screenshot">
+        <img id="cahsmImg2" src="/images/appScreenshots/schedulerNewEvent.png" alt="Scheduler new event screenshot">
     </div>
 
     <div>
@@ -45,6 +45,15 @@
             </p>
         </span>
     </div>
+</div>
+
+<div id="expandImages">
+    <img id="expandSpedo1" src="/images/appScreenshots/speedoGreen.svg" alt="Speedometer app screenshot">
+    <img id="expandSpedo2" src="/images/appScreenshots/speedoYellow.svg" alt="Speedometer app screenshot">
+    <img id="expandSpedo3" src="/images/appScreenshots/speedoRed.svg" alt="Speedometer app screenshot">
+    
+    <img id="expandScheduler1" src="/images/appScreenshots/schedulerCalendar.png" alt="Scheduler calendar screenshot">
+    <img id="expandScheduler2" src="/images/appScreenshots/schedulerNewEvent.png" alt="Scheduler new event screenshot">
 </div>
 
 <%- include ('./../partials/footer') %>  
