--- a/public/scss/_index.scss
+++ b/public/scss/_index.scss
@@ -32,6 +32,9 @@
             text-align: right;
         }
     }
+    img:hover {
+        cursor: pointer;
+    }
 }
 
 #speedometer {
@@ -73,15 +76,29 @@
     height: 100%;
     width: 100%;
 
-    background-color: rgba(0, 0, 0, 0.4);
+    background-color: rgba(0, 0, 0, 0.6);
+
+    backdrop-filter: blur(5px);
+    -webkit-backdrop-filter: blur(5px);
 
     img {
         display: none;
+        max-height: 80vh;
+        max-width: 100vw;
     }
 }
 
 .showExpandedImgDiv {
     display: flex !important;
+    p {
+        color: $white;
+        font-size: 1.2rem;
+        font-weight: 700;
+        text-align: center;
+    }
+    p:hover {
+        cursor: pointer;
+    }
 }
 
 .showExpandedImg {
