--- a/views/pages/resume.ejs
+++ b/views/pages/resume.ejs
@@ -6,7 +6,7 @@
             <h2>Contact</h2>
             <hr/>
             <p>803-493-7198</p>
-            <p>waltersm305@gmail.com</p>
+            <p>me@michaelwalters.dev</p>
             <p>Rock Hill, South Carolina</p>        
         </div>
         <div>
