lazy loading + preload css

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -8,9 +8,9 @@
 
 <div id="speedometer" class="productHighlight">
     <div id="speedoImgContainer">
-        <img id="speedoImg1" class="previewImg" onclick="showProjectImg('speedoImg1')" src="/images/appScreenshots/speedoGreen.svg" alt="Speedometer app screenshot">
-        <img id="speedoImg2" class="previewImg" onclick="showProjectImg('speedoImg2')" src="/images/appScreenshots/speedoYellow.svg" alt="Speedometer app screenshot">
-        <img id="speedoImg3" class="previewImg" onclick="showProjectImg('speedoImg3')" src="/images/appScreenshots/speedoRed.svg" alt="Speedometer app screenshot">
+        <img id="speedoImg1" class="previewImg" loading="lazy" onclick="showProjectImg('speedoImg1')" src="/images/appScreenshots/speedoGreen.svg" alt="Speedometer app screenshot">
+        <img id="speedoImg2" class="previewImg" loading="lazy" onclick="showProjectImg('speedoImg2')" src="/images/appScreenshots/speedoYellow.svg" alt="Speedometer app screenshot">
+        <img id="speedoImg3" class="previewImg" loading="lazy" onclick="showProjectImg('speedoImg3')" src="/images/appScreenshots/speedoRed.svg" alt="Speedometer app screenshot">
     </div>
 
     <div>
@@ -29,8 +29,8 @@
 
 <div id="schedulerApp" class="productHighlight">
     <div id="schedulerImgContainer">
-        <img id="cahsmImg1" class="previewImg" onclick="showProjectImg('cahsmImg1')" src="/images/appScreenshots/schedulerCalendar.png" alt="Scheduler calendar screenshot">
-        <img id="cahsmImg2" class="previewImg" onclick="showProjectImg('cahsmImg2')" src="/images/appScreenshots/schedulerNewEvent.png" alt="Scheduler new event screenshot">
+        <img id="cahsmImg1" class="previewImg" loading="lazy" onclick="showProjectImg('cahsmImg1')" src="/images/appScreenshots/schedulerCalendar.png" alt="Scheduler calendar screenshot">
+        <img id="cahsmImg2" class="previewImg" loading="lazy" onclick="showProjectImg('cahsmImg2')" src="/images/appScreenshots/schedulerNewEvent.png" alt="Scheduler new event screenshot">
     </div>
 
     <div>
