--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -4,6 +4,10 @@
 <head>
     <title><%= title %> </title>
 
+    <link rel="preload" as="style" type="text/css" href="//fonts.googleapis.com/css?family=Ubuntu" />
+    <link rel="preload" as="style" href="./css/reset.css">
+    <link rel="preload" as="style" href="./css/main.css">
+
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Ubuntu" />
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/main.css">
