Lazy loading on large images

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -49,12 +49,12 @@
 
 <div id="expandImages">
     <div>
-        <img id="expandSpedo1" class="expandedImg" onclick="" src="/images/appScreenshots/speedoGreen.svg" alt="Speedometer app screenshot">
-        <img id="expandSpedo2" class="expandedImg" onclick="" src="/images/appScreenshots/speedoYellow.svg" alt="Speedometer app screenshot">
-        <img id="expandSpedo3" class="expandedImg" onclick="" src="/images/appScreenshots/speedoRed.svg" alt="Speedometer app screenshot">
+        <img id="expandSpedo1" class="expandedImg" loading="lazy" onclick="" src="/images/appScreenshots/speedoGreen.svg" alt="Speedometer app screenshot">
+        <img id="expandSpedo2" class="expandedImg" loading="lazy" onclick="" src="/images/appScreenshots/speedoYellow.svg" alt="Speedometer app screenshot">
+        <img id="expandSpedo3" class="expandedImg" loading="lazy" onclick="" src="/images/appScreenshots/speedoRed.svg" alt="Speedometer app screenshot">
         
-        <img id="expandScheduler1" class="expandedImg" onclick="" src="/images/appScreenshots/schedulerCalendar.png" alt="Scheduler calendar screenshot">
-        <img id="expandScheduler2" class="expandedImg" onclick="" src="/images/appScreenshots/schedulerNewEvent.png" alt="Scheduler new event screenshot">
+        <img id="expandScheduler1" class="expandedImg" loading="lazy" onclick="" src="/images/appScreenshots/schedulerCalendar.png" alt="Scheduler calendar screenshot">
+        <img id="expandScheduler2" class="expandedImg" loading="lazy" onclick="" src="/images/appScreenshots/schedulerNewEvent.png" alt="Scheduler new event screenshot">
         <p onclick="hideProjectImages()">Close</p>
     </div>
 </div>
