--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,13 +1,13 @@
 <nav>
     <ul>
         <% if (page == 'Home') { %>
-            <li><a href="/" style="background-color:#322b24; padding: 5px; border-radius: 10px; color: #fafafa">Home</a></li>
+            <li><a href="/" class="navActivePage">Home</a></li>
         <% } else { %>
             <li><a href="/">Home</a></li>
         <% } %>
 
         <% if (page == 'Resume') { %>
-            <li><a href="/resume" style="background-color:#322b24; padding: 5px; border-radius: 10px; color: #fafafa">Resume</a></li>
+            <li><a href="/resume" class="navActivePage">Resume</a></li>
         <% } else { %>
             <li><a href="/resume">Resume</a></li>
         <% } %>
