--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title><%= title %> </title>
+    <title>Michael Walters Development</title>
 
     <link rel="preload" as="style" type="text/css" href="//fonts.googleapis.com/css?family=Ubuntu" />
     <link rel="preload" as="style" href="./css/reset.css">
