--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,4 +1,4 @@
-<%- include('head', {title: title}) %> 
+<%- include('head') %> 
 
 <body>
 
@@ -14,4 +14,4 @@
 
 </header>
 
-<%- include('nav', {page: page}) %> 
+<%- include('nav') %> 
