Seperate Index header image

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -1,4 +1,20 @@
-<%- include ("./../partials/header", {page: "Home", title: "Michael Walters Development"}) %>  
+<%- include('../partials/head') %> 
+
+<body>
+
+<header id="indexHeader">
+    <div>
+        <span>
+            <h1>Michael Walters</h1>
+            <p>Web Development</p>
+        </span>
+    </div>
+
+    <%- include('../partials/socialLinks') %> 
+
+</header>
+
+<%- include('../partials/nav') %> 
 
 <div id="aboutMe">
     <h2>About Me</h2>
