--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -19,20 +19,18 @@ hr {
     background-color: $black;
 }
 
-header {
+#indexHeader, #nonIndexHeader {
     height: 85vh; //Header height
     background-color: $blue; //Sets bg color to desired color
 
     color: $white;
 
-    //Sets background img positioning to right and auto height fill
     background-image: url('/images/placeholder.jpg'); 
     background-size: auto 100%; // W x H
     background-repeat: no-repeat;
     background-size: cover;
     background-position-y: center;
     background-position-x: right;
-    //Sets background img positioning to right and auto height fill
 
     div:nth-of-type(1) { //Contains header main text
         display: flex; //Centers header text vertically
@@ -58,6 +56,14 @@ header {
         a {
             color: $white;
         }
+    }
+}
+
+#nonIndexHeader {
+    height: 200px;
+    background-image: none;
+    div:nth-of-type(1) {
+        justify-content: left;
     }
 }
 
