Background image typo

--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -25,7 +25,7 @@ hr {
 
     color: $white;
 
-    background-image: url('/images/MeBG.jpg');
+    background-image: url('/images/meBG.jpg');
     background-repeat: no-repeat;
     background-position-y: top;
     background-position-x: right;
