--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -2,8 +2,6 @@
 
 <body>
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-
 <header id="indexHeader">
     <div>
         <span>
@@ -27,7 +25,6 @@
 <div id="projects">
     <h2>Projects</h2>
     <hr>
-    <p id="projectSubtitle">Click on a project to view it's description.</p>
 
     <div id="projectSquares">
         <span id="CMSSquare">
@@ -43,18 +40,11 @@
 
     <div id="projectParagraphs">
         <div id="CMSParagraph">
-            <h3>Cloud Music Suite</h3>
-            <hr>
             <p>
-                This app was created to give music students and educators alike a better way to connect and carry out music lessons. It  groups all necessary aspects of taking lessons into one centralized location, including instructor discovery, lesson availability, schedule management, file management, and lesson feedback. My role in this project was to design and implement the front end design used throughout the entirety of the website, as well as helping with any backend issues that the other two members needed help with. Seeing as this is a project currently in use, the github repository is not available to look through. You can however view the current version with the below link.
-            </p>
-            <p>
-                <a href="https://cloudmusicsuite.com" target="blank">View Project</a>
+                This app was created to give music students and educators alike a better way to connect and carry out music lessons. It  groups all necessary aspects of taking lessons into one centralized location, including instructor discovery, lesson availability, schedule management, file management, and lesson feedback. My role in this project was to design and implement the front end design used throughout the entirety of the website, as well as helping with any backend issues that the other two members needed help with. Seeing as this is a project currently in use, the github project is not available to look through.
             </p>
         </div>
         <div id="SpeedometerParagraph">
-            <h3>Speedometer</h3>
-            <hr>
             <p>
                 This app was designed to create a better way for users to track their speed along with the speed limit of the road they're driving on. It also serves as a way for parents or guardians to keep track of whether or not their child is speeding. This works based off of a three strike system, and allows the parent or guardian to set the limit for how fast and how long the child can speed, as well as who to notify if they do. 
             </p>
@@ -62,9 +52,7 @@
                 <a href="https://github.com/Walters8657/Android-Speedometer" target="blank">View on GitHub</a>
             </p>
         </div>
-        <div id="ScheduleParagraph">
-            <h3>Schedule Manager</h3>
-            <hr>
+        <div id="ScheuleParagraph">
             <p>
                 This app was designed to give the children's attention home of Rock Hill a better way to organize their children's schedules. Previously they had been keeping track of the schedules on paper, but with this new system it allowed every child and staff member to view the schedules they need to see. It also opened up the ability to easily generate reports based on name, age, gender, event, and date to know if events are being attended when they are scheduled. 
             </p>
