--- a/public/scss/_index.scss
+++ b/public/scss/_index.scss
@@ -22,6 +22,8 @@
         span {
             width: 250px;
             height: 250px;
+            display: flex;
+            align-items: center;
             position: relative;
 
             box-shadow: 10px 10px 10px rgba(20, 17, 14, 0.4);
@@ -29,10 +31,8 @@
                 color: $white;
                 background-color: rgba(20, 17, 14, 0.8);
                 position: absolute;
-                bottom: 0px;
-
                 padding: 10px;
-
+                bottom: 0px;
                 width: 230.03px;
                 height: 62px;
             }
@@ -51,13 +51,106 @@
             background-size: cover;
         }
     }
+}
 
-    #projectParagraphs {
-        div {
-            p:nth-of-type(2) {
-                text-align: right;
-                margin-top: 10px;
-            }
+/*
+.productHighlight {
+    @include padding;
+    @media (min-width: 980px) {
+        display: grid;
+        grid-template-columns: auto 300px 600px auto;
+        column-gap: 20px;
+        div:nth-of-type(1) {
+            grid-column: 2/3;
+        }
+        div:nth-of-type(2) {
+            display: flex;
+            align-self: center;
+            
+        }
+    }
+    div:nth-of-type(1) {
+        margin: auto;
+        height: 316px;
+        width: 300px;
+    }
+    div:nth-of-type(2) {
+        p:nth-last-of-type(1) > a {
+            display: block;
+            margin-top: 10px;
+            text-align: right;
+        }
+    }
+    img:hover {
+        cursor: pointer;
+    }
+}
+
+#speedometer {
+    #speedoImgContainer {
+        img {
+            width: 150px;
+            position: relative;
+        }
+        img:nth-of-type(2) {
+            margin-left: -80px;
+            top: 25px;
+        }
+        img:nth-of-type(3) {
+            margin-left: -80px;
+            top: 50px;
         }
     }
 }
+
+#schedulerApp {
+    #schedulerImgContainer {
+        img {
+            display: block;
+            width: 300px;
+        }
+    }
+}
+
+#expandImages {
+    //display: flex;
+    display: none;
+    align-items: center;
+    justify-content: center;
+    
+    position: fixed;
+    top: 0;
+    left: 0;
+
+    height: 100%;
+    width: 100%;
+
+    background-color: rgba(0, 0, 0, 0.6);
+
+    backdrop-filter: blur(5px);
+    -webkit-backdrop-filter: blur(5px);
+
+    img {
+        display: none;
+        max-height: 80vh;
+        max-width: 100vw;
+    }
+}
+
+.showExpandedImgDiv {
+    display: flex !important;
+    p {
+        color: $white;
+        font-size: 1.2rem;
+        font-weight: 700;
+        text-align: center;
+    }
+    p:hover {
+        cursor: pointer;
+    }
+}
+
+.showExpandedImg {
+    display: block !important;
+}
+*/
